[tool.poetry]
name = "pypinger"
version = "0.1.0"
description = "Python Ping tester"
authors = ["Al DAmico <JavaWiz1@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/JavaWiz1/pypinger"
keywords = ["ping", "network tool", "python"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
pypinger = "pypinger:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
